--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Vincent Setiawan</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Vincent!</h1>
-				<p>This is website draft <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:Vincent@mymail.sutd.edu.sg">email</a></li>
-        		<li><a href="https://github.com/Vincentcent1">github.com/Vincentcent1</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Vincent Setiawan
+---
+<div class="blurb">
+	<h1>Hi there, I'm Vincent!</h1>
+	<p>This is a website draft<a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
