--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@ title: Vincent Setiawan
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Vincent!</h1>
-	<p>This is a website draft<a href="/about">Read more about my life...</a></p>
+	<p>
+		This is a website draft<br></br>
+		<a href="/about">Read more about my life...</a>
+	</p>
 </div><!-- /.blurb -->
