--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Vincent Setiawan
 <div class="blurb">
 	<h1>Hi there, I'm Vincent!</h1>
 	<p>
-		This is a website draft<br></br>
+		This is a website draft<br>
 		<a href="/about">Read more about my life...</a>
 	</p>
 </div><!-- /.blurb -->
